log
Thu Apr 16 08:45:05 PM UTC 2026: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:74:21: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   74 |         map->buckets->key = key;
      |                     ^~
      |         (*          )
hashmap.c:76:21: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   76 |         map->buckets->values = values;
      |                     ^~
      |         (*          )
hashmap.c:76:32: error: ‘values’ undeclared (first use in this function); did you mean ‘value’?
   76 |         map->buckets->values = values;
      |                                ^~~~~~
      |                                value
hashmap.c:76:32: note: each undeclared identifier is reported only once for each function it appears in
8e1216e
